# gitlab-pkgbot

./: .gitignore  .gitlab-ci.yml  .pkg-bot.yml  .semrelrc  Makefile  README.md  nfpm.yaml  pyproject.toml  setup.py
.github/workflows/: package.yml  release.yml
packaging/: build-package-tree.sh
pkgbot/: FifoSocketQueue.py  GitlabArtifacts.py  GitlabHelper.py  __init__.py  aptlyspooler.py  daemon.py  version.py
pkgbot/config/: aptly-fifoqueue.service  aptly-spooler.service  gitlab-pkgbot.service  gitlab-pkgbot.yaml
pkgbot/scripts/: pkg-mkdirs.sh  rpmsign-nointeractive.sh
